switching between texture maps doesn't update the preview of the texture #46271

Closed
opened 2015-09-26 13:41:58 +02:00 by Bubble Bobble · 6 comments

System Information
Windows 7, NVIDIA Quadro 1000m

Blender Version
Broken: 2.76 RC c586e30
Worked: (unsure)

Short description of error

Using the dropdown menu in the texture panel in cycles doesn't update the texture preview

Exact steps for others to reproduce the error

  1. open the blend file here: toothpaste_displacement_.blend
  2. use the below dropdown menu to switch between displacement modifiers that use textures, and you'll see that the texture preview doesn't update despite texture settings updating 000461-09-26-15 07_33_07.png
**System Information** Windows 7, NVIDIA Quadro 1000m **Blender Version** Broken: 2.76 RC c586e30 Worked: (unsure) **Short description of error** Using the dropdown menu in the texture panel in cycles doesn't update the texture preview **Exact steps for others to reproduce the error** 1) open the blend file here: [toothpaste_displacement_.blend](https://archive.blender.org/developer/F239512/toothpaste_displacement_.blend) 2) use the below dropdown menu to switch between displacement modifiers that use textures, and you'll see that the texture preview doesn't update despite texture settings updating ![000461-09-26-15 07_33_07.png](https://archive.blender.org/developer/F239513/000461-09-26-15_07_33_07.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JimCantley

Added subscriber: @JimCantley

This issue was referenced by 3bc16c3362

This issue was referenced by 3bc16c3362d31add3c18490ec3650bed2a23958b

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46271
No description provided.