Fix T46271: switching between textures in texture buttons not updating preview.